spacing issue for blog nine

--- a/src/app/examples/blog/blog-nine/blog-nine.component.scss
+++ b/src/app/examples/blog/blog-nine/blog-nine.component.scss
@@ -1,1 +1,6 @@
-@import '../shared/blog-styles'
+@import '../shared/blog-styles';
+
+.limitTextHeightNine {
+    height: 13em;
+    overflow: hidden;
+  }
